--- a/demoApp/demoApp/en.lproj/MainStoryboard.storyboard
+++ b/demoApp/demoApp/en.lproj/MainStoryboard.storyboard
@@ -1578,7 +1578,7 @@
                                 </connections>
                             </button>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="E0k-1v-8QT">
-                                <rect key="frame" x="20" y="162" width="280" height="392"/>
+                                <rect key="frame" x="20" y="194" width="280" height="360"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -1593,6 +1593,20 @@
                                     <action selector="playerAuth:" destination="w0o-dT-IE4" eventType="touchDown" id="8sm-zx-abt"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="o4D-Al-lNd">
+                                <rect key="frame" x="5" y="150" width="157" height="30"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Get Player From node">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="listPlayer:" destination="w0o-dT-IE4" eventType="touchDown" id="xLE-gq-Yb3"/>
+                                </connections>
+                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="eeG-eL-Oo8">
+                                <rect key="frame" x="204" y="72" width="86" height="55"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
@@ -1600,6 +1614,8 @@
                     <connections>
                         <outlet property="detailView" destination="E0k-1v-8QT" id="G32-va-JrY"/>
                         <outlet property="getContent" destination="tYh-iS-5ry" id="ttC-Im-Mhg"/>
+                        <outlet property="listPlayer" destination="o4D-Al-lNd" id="2z1-qO-uTD"/>
+                        <outlet property="photo" destination="eeG-eL-Oo8" id="lkf-FR-ijH"/>
                         <outlet property="playerAuth" destination="nH2-SX-fcH" id="una-xA-Urb"/>
                     </connections>
                 </viewController>
